--- a/AsmSpy.CommandLine/AsmSpy.CommandLine.csproj
+++ b/AsmSpy.CommandLine/AsmSpy.CommandLine.csproj
@@ -54,15 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsmSpy.CommandLine.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>AsmSpy.CommandLine.resx</DependentUpon>
-    </Compile>
-    <Compile Include="BindingRedirectExport.cs" />
     <Compile Include="ConsoleLogger.cs" />
-    <Compile Include="ConsoleVisualizer.cs" />
-    <Compile Include="DgmlExport.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -76,12 +68,10 @@
       <Project>{5acc768b-f9f7-4472-9ab9-2543e32fd1ed}</Project>
       <Name>AsmSpy.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="AsmSpy.CommandLine.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>AsmSpy.CommandLine.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <ProjectReference Include="..\AsmSpy.Visualizers\AsmSpy.Visualizers.csproj">
+      <Project>{88e0b1b2-2099-4b3d-a8d8-df8ec6c29c10}</Project>
+      <Name>AsmSpy.Visualizers</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
@@ -96,7 +86,8 @@
       <ILMergeOutputFilePath>$(OutputPath)$(ILMergeOutputFile)</ILMergeOutputFilePath>
       <FrameworkPath>$(ProgramFiles)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2</FrameworkPath>
       <FrameworkPath Condition="'$(MSBuildProgramFiles32)' != ''">$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.2</FrameworkPath>
-      <ILMergeCommandArgs>/targetplatform:"v4, $(FrameworkPath)" /internalize:"$(ILMergeInternalizeIgnoreFile)" /target:exe /out:"Merged\$(ILMergeOutputFile)" /log:"Merged\ilmerge.msbuild.log" /allowDup AsmSpy.CommandLine.exe AsmSpy.Core.dll Microsoft.Extensions.CommandLineUtils.dll</ILMergeCommandArgs>
+	  <!-- About the closed argument: https://stackoverflow.com/a/2367264 -->
+      <ILMergeCommandArgs>/closed /targetplatform:"v4, $(FrameworkPath)" /internalize:"$(ILMergeInternalizeIgnoreFile)" /target:exe /out:"Merged\$(ILMergeOutputFile)" /log:"Merged\ilmerge.msbuild.log" /allowDup AsmSpy.CommandLine.exe AsmSpy.Core.dll Microsoft.Extensions.CommandLineUtils.dll</ILMergeCommandArgs>
     </PropertyGroup>
     <ItemGroup>
       <ILMergeItems Include="$(OutputPath)\*.dll;$(OutputPath)\*.exe" />
