--- a/AsmSpy.MSTask/AsmSpy.MSTask.csproj
+++ b/AsmSpy.MSTask/AsmSpy.MSTask.csproj
@@ -37,7 +37,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DetectDllConflictsTask.cs" />
+    <Compile Include="DetectNotFoundAssembliesTask.cs" />
     <Compile Include="MsBuildLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
